-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.9.6, 5.13.2, 5.14.1, 5.15
-
-
5f2b53f13c40c31da21d8352312962bb97cb8c97 (qt/qtbase/dev) 1689fe2b810304161a8449d36b6dfb845c90eb09 (qt/qtbase/5.15)
In our app (which is using Qt 5.9.6) and in QtCreator (I'm running 4.10.2 which uses Qt 5.13.2), pressing Cmd+H when a tooltip is displayed should hide the app, but doesn't.
To reproduce with QtCreator, simply hover the mouse over the Welcome icon until the "Switch to Welcome mode ^1" tooltip appears and press Cmd-H. QtCreator doesn't hide. But if you don't wait for the tooltip to display and press Cmd+H, QtCreator hides. Interestingly, I tried QtCreator 4.11.1 which uses Qt 5.14.1 and Cmd-H closed the tooltip. I had to Cmd-H again to hide QtCreator.
Note that hovering a button in Finder until a tooltip is shown and pressing Cmd+H causes Finder to be hidden. Qt apps should do the same.
For Gerrit Dashboard: QTBUG-82626 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
320985,2 | Cocoa: Allow CMD+H to hide the application when a tooltip is visible | dev | qt/qtbase | Status: MERGED | +2 | 0 |
321032,2 | Cocoa: Allow CMD+H to hide the application when a tooltip is visible | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
371145,3 | macOS: don't block CMD+H while a popup is open | dev | qt/qtbase | Status: MERGED | +2 | 0 |
371189,1 | macOS: don't block CMD+H while a popup is open | 6.2 | qt/qtbase | Status: ABANDONED | +2 | 0 |