Cocoa: Allow CMD+H to hide the application when a tooltip is visible

Since native applications allow CMD+H to hide an application when the
tooltip is visible then we should do too. Other popup windows will
still block the call.

Fixes: QTBUG-82626
Change-Id: Ieac86d6b3cb2152a3ba82d8bd850f13bfeedb7c8
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 5f2b53f13c40c31da21d8352312962bb97cb8c97)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>